--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,6 +25,6 @@ tauri = { version = "2.7.0", features = [] }
 tauri-plugin-log = "2"
 tauri-plugin-dialog = "2"
 tauri-plugin-shell = "2"
-tauri-plugin-http = "2"
 tokio = { version = "1.0", features = ["full"] }
 encoding_rs = "0.8"
+reqwest = { version = "0.11", features = ["json"] }
