--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "start": "tauri dev"
+    "start": "tauri dev",
+    "tauri": "tauri",
+    "tauri:dev": "tauri dev",
+    "tauri:build": "tauri build",
+    "release:patch": "node scripts/version-manager.cjs patch",
+    "release:minor": "node scripts/version-manager.cjs minor",
+    "release:major": "node scripts/version-manager.cjs major",
+    "release:rollback": "node scripts/version-manager.cjs rollback",
+    "test:env": "node scripts/version-manager.cjs --test-env"
   },
   "dependencies": {
     "@tauri-apps/api": "^2.7.0",
@@ -22,7 +30,10 @@
     "@types/node": "^24.1.0",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/tsconfig": "^0.7.0",
+    "dotenv": "^16.4.5",
     "sass-embedded": "^1.89.2",
+    "semver": "^7.6.3",
+    "simple-git": "^3.27.0",
     "typescript": "~5.8.3",
     "vite": "^7.0.4",
     "vue-tsc": "3.0.3"
