--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "app"
-version = "0.1.0"
+version = "0.0.0"
 description = "A Tauri App"
 authors = ["you"]
 license = ""
@@ -27,4 +27,8 @@ tauri-plugin-dialog = "2"
 tauri-plugin-shell = "2"
 tokio = { version = "1.0", features = ["full"] }
 encoding_rs = "0.8"
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.11", features = ["json", "stream"] }
+futures-util = "0.3"
+base64 = "0.21"
+dirs = "5.0"
+dotenv = "0.15"
