--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
-  "name": "githelper-tauri",
+  "name": "workhelper-tauri",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "description": "一个方便公司提交与修改OA日报周报的管理工具",
+  "author": {
+    "name": "Msg-Lbo",
+    "email": "msglbo@foxmail.com"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Msg-Lbo/workHelper-tauri.git"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
