--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "app"
+name = "workHelper"
 version = "0.0.0"
-description = "A Tauri App"
-authors = ["you"]
-license = ""
-repository = ""
+description = "一个方便公司提交与修改OA日报周报的管理工具"
+authors = ["Msg-Lbo <msglbo@foxmail.com>"]
+license = "MIT"
+repository = "https://github.com/Msg-Lbo/workHelper-tauri"
 edition = "2021"
 rust-version = "1.77.2"
 
