feat: 更新WebDAV配置示例，添加环境变量加载功能，优化构建过程中的环境变量处理

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,22 @@
-# WebDAV服务器配置
+# WebDAV 服务器配置
+# 用于应用更新检查和文件上传
+
+# WebDAV 服务器地址
 WEBDAV_URL=https://your-server.com/webdav
+
+# WebDAV 用户名
 WEBDAV_USERNAME=your-username
+
+# WebDAV 密码
 WEBDAV_PASSWORD=your-password
-WEBDAV_REMOTE_PATH=/releases
-WEBDAV_BASE_URL=https://your-server.com/releases
+
+# WebDAV 远程路径（存储发布文件的目录）
+WEBDAV_REMOTE_PATH=/workHelper
+
+# WebDAV 基础URL（用于下载链接）
+WEBDAV_BASE_URL=https://your-server.com/workHelper
+
+# 注意：
+# 1. 复制此文件为 .env 并填入真实的配置信息
+# 2. .env 文件包含敏感信息，不要提交到版本控制系统
+# 3. 在构建生产版本时，这些环境变量会被编译到应用中
