--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "tauri": "tauri",
     "tauri:dev": "tauri dev",
     "tauri:build": "tauri build",
+    "tauri:build:env": "node scripts/version-manager.cjs build-only",
     "release:patch": "node scripts/version-manager.cjs patch",
     "release:minor": "node scripts/version-manager.cjs minor",
     "release:major": "node scripts/version-manager.cjs major",
-    "release:rollback": "node scripts/version-manager.cjs rollback",
-    "test:env": "node scripts/version-manager.cjs --test-env"
+    "release:rollback": "node scripts/version-manager.cjs rollback"
   },
   "dependencies": {
     "@tauri-apps/api": "^2.7.0",
